[package]
name = "wl-monitor-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
csv = "1.3.1"
maud = { version = "0.27.0", features = ["actix-web"] }
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
serde_json = "1.0.141"
surf = "2.3.2"
